service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otusapp-service
spec:
  selector:
    app: otusapp-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
      nodePort: 30800
  type: NodePort
